# atcoder-dumper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/atcoder/: atcoder.py
src/atcoder_dumper/: atcoder.py  cli.py  extensions.json
